--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,19 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portfolio de Daniel Senespleda</title>
 	</head>
-	<body>
+	<body class="bg-gray-50 text-gray-900 font-sans min-h-screen">
 		<slot />
 	</body>
 </html>
