--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import "../styles/global.css";
   <!-- Presentación -->
   <section
     id="presentacion"
+    class="zona-presentacion"
     style="background-color: #BEBCBC; height: 100vh; display: flex; align-items: center;"
   >
     <div
@@ -46,7 +47,7 @@ import "../styles/global.css";
   <!-- Sobre mí -->
   <section
     id="sobre-mi"
-    style="background-color: #F2EAE5; padding: 6rem 0 4rem 0;"
+    style="background-color: #F2EAE5; padding: 6rem 0 4rem 0; margin-top: 3rem;"
   >
     <div style="max-width: 64rem; margin: 0 auto; padding: 0 1rem;">
       <h2
