--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -125,4 +125,70 @@ html {
     grid-template-columns: 1fr;
   }
 
+  /*Seccion de recorrido*/
+    #timeline {
+    flex-direction: column !important;
+    align-items: flex-start !important;
+    overflow: visible !important;
+    padding-left: 2rem !important;
+    position: relative;
+  }
+
+  /* Línea vertical */
+  #timeline::before {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: 0;
+    bottom: 0;
+    width: 4px;
+    background-color: #7E2F15;
+    z-index: 0;
+  }
+
+  /* Oculta la línea horizontal que está dentro del primer div */
+  #timeline > div:first-child {
+    display: none !important;
+  }
+
+  /* Cada evento */
+  #timeline > div {
+    position: relative !important;
+    min-width: auto !important;
+    margin-left: 2.5rem;
+    margin-bottom: 3rem;
+  }
+
+  /* Punto sobre la línea */
+  #timeline > div > div:first-child {
+    position: absolute !important;
+    left: -2.5rem;
+    top: 0.5rem;
+    transform: none !important;
+  }
+
+  /* Tarjeta del evento */
+  #timeline > div > div:nth-child(2) {
+    position: relative !important;
+    top: auto !important;
+    bottom: auto !important;
+    transform: none !important;
+    margin-left: 1rem;
+    margin-top: 0 !important;
+  }
+#recorrido button {
+  display: none !important;
+}
+
+  #timeline > div > div:nth-child(2) {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.6s ease;
+  }
+
+  #timeline > div.show > div:nth-child(2) {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
 }
