--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@ html {
 
 .aeropuerto-img {
   width: 100%;
-  height: 240px;
+  height: 75%;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   /*max-height: 400px;*/
