--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,44 @@
+@import "tailwindcss";
+
+html {
+  scroll-behavior: smooth;
+}
+
+.aeropuerto-img {
+  width: 100%;
+  height: 62%;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  /*max-height: 400px;*/
+  object-fit: cover;
+}
+
+.grid-proyectos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+/* Estilos base - Escritorio */
+#nav-menu {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  color: #7E2F15;
+  position: static;
+  max-height: none;
+  overflow: visible;
+  pointer-events: auto;
+}
+
+#nav-toggle {
+  display: none; /* Botón oculto en escritorio */
+}
+
+/* Para móvil */
 @media (max-width: 768px) {
   body {
     padding: 1rem;
@@ -19,9 +60,12 @@
     font-size: 1rem;
   }
 
-  /* MENÚ HAMBURGUESA */
+  /*  MENÚ HAMBURGUESA */
   #nav-toggle {
     display: block !important;
+    background: none;
+    border: none;
+    cursor: pointer;
   }
 
   #nav-menu {
@@ -40,13 +84,13 @@
     transition: max-height 0.3s ease;
     overflow: hidden;
     max-height: 0;
-    pointer-events: none; /* bloquea clics cuando está oculto */
+    pointer-events: none;
   }
 
   #nav-menu.show {
     display: flex !important;
     max-height: 500px;
-    pointer-events: auto; /* permite clics cuando está visible */
+    pointer-events: auto;
   }
 
   #nav-menu li {
